# any2any

./: .gitignore  CLAUDE.md  pyproject.toml
.github/workflows/: test.yml
docs/: HowToRunCN.md
src/any2any/: __init__.py  __main__.py  cli.py
src/any2any/converters/: __init__.py  image.py  web.py
tests/: test_cli.py  test_image.py  test_real_files.py  test_web.py
tests/assests/: heic.HEIC
